@@ -32,15 +32,75 @@
 #include "CoreFoundation/CFSocket.h"
 #include "GSPrivate.h"
 
+#include <math.h>
+
+#if defined(_WIN32)
+#include <winsock2.h>
+#define EINPROGRESS WSAEINPROGRESS
+#else
+#include <sys/select.h>
+#include <sys/time.h>
+#include <sys/types.h>
+#include <sys/socket.h>
+#include <fcntl.h>
+#include <errno.h>
+#ifndef INVALID_SOCKET
+#define INVALID_SOCKET (-1)
+#endif
+#endif
+
 static CFTypeID _kCFSocketTypeID = 0;
+static CFMutableDictionaryRef _kCFSocketObjects = NULL;
+static GSMutex _kCFSocketObjectsLock;
+
+static void
+CFSocketFinalize (CFTypeRef cf)
+{
+  CFSocketRef s = (CFSocketRef)cf;
+  
+}
+
+static CFRuntimeClass CFSocketClass =
+{
+  0,
+  "CFSocket",
+  NULL,
+  NULL,
+  CFSocketFinalize,
+  NULL,
+  NULL,
+  NULL,
+  NULL
+};
+
+void
+CFSocketInitialize (void)
+{
+  _kCFSocketTypeID = _CFRuntimeRegisterClass (&CFSocketClass);
+  GSMutexInitialize (&_kCFSocketObjectsLock);
+}
+
+CF_INLINE int
+CFSocketGetLastError (void)
+{
+#if defined(_WIN32)
+  return WSAGetLastError ();
+#else
+  return errno;
+#endif
+}
+
+
 
 struct __CFSocket
 {
   CFRuntimeBase    parent;
   CFSocketNativeHandle _socket;
-  CFOptionFlags    _callbackTypes;
+  CFOptionFlags    _opts;
+  CFOptionFlags    _cbTypes;
   CFSocketCallBack _callback;
-  CFSocketContext  _context;
+  CFSocketContext  _ctx;
+  CFDataRef        _address;
 };
 
 CFTypeID
@@ -49,43 +109,151 @@ CFSocketGetTypeID (void)
   return _kCFSocketTypeID;
 }
 
+#define CFSOCKET_SIZE sizeof(struct __CFSocket) - sizeof(CFRuntimeBase)
+
 CFSocketRef
-CFSocketCreate (CFAllocatorRef allocator, SInt32 protocolFamily,
-                SInt32 socketType, SInt32 protocol,
-                CFOptionFlags callBackTypes, CFSocketCallBack callback,
-                const CFSocketContext *context)
+CFSocketCreateWithNative (CFAllocatorRef alloc, CFSocketNativeHandle sock,
+                          CFOptionFlags cbTypes,
+                          CFSocketCallBack callback,
+                          const CFSocketContext *ctx)
 {
-  return NULL;
+  CFSocketRef new = NULL;
+  
+  GSMutexLock (&_kCFSocketObjectsLock);
+  
+  if (_kCFSocketObjects == NULL)
+    {
+      _kCFSocketObjects = CFDictionaryCreateMutable (kCFAllocatorSystemDefault,
+                            0, NULL,  &kCFTypeDictionaryValueCallBacks);
+    }
+  if (CFDictionaryGetValueIfPresent (_kCFSocketObjects,
+                                     (const void*)(uintptr_t)sock,
+                                     (const void**)&new))
+    {
+      GSMutexUnlock (&_kCFSocketObjectsLock);
+      return new;
+    }
+  
+  if (new == NULL)
+    {
+      new = (CFSocketRef)_CFRuntimeCreateInstance (alloc, _kCFSocketTypeID,
+                                                   CFSOCKET_SIZE, 0);
+      if (new != NULL)
+        {
+          new->_socket = sock;
+          new->_cbTypes = cbTypes;
+          new->_callback = callback;
+          if (ctx != NULL)
+            {
+              if (ctx->info != NULL)
+                new->_ctx.info = (void*)(ctx->retain ? ctx->retain (ctx->info)
+                                                     : ctx->info);
+              new->_ctx.retain = ctx->retain;
+              new->_ctx.release = ctx->release;
+              new->_ctx.copyDescription = ctx->copyDescription;
+            }
+          CFDictionaryAddValue (_kCFSocketObjects,
+                                (const void*)(uintptr_t)sock, new);
+        }
+    }
+  
+  GSMutexUnlock (&_kCFSocketObjectsLock);
+  
+  return new;
+}
+
+#if defined(_WIN32)
+static Boolean _kWinsockInitialized = false;
+#define WINSOCK_MAJOR_VERSION 2
+#define WINSOCK_MINOR_VERSION 2
+#endif
+
+CFSocketRef
+CFSocketCreate (CFAllocatorRef alloc, SInt32 protocolFamily,
+                SInt32 socketType, SInt32 protocol,
+                CFOptionFlags cbTypes, CFSocketCallBack callback,
+                const CFSocketContext *ctx)
+{
+  CFSocketRef new = NULL;
+  CFSocketNativeHandle s;
+#if defined(_WIN32)
+  if (_kWinsockInitialized == false)
+    {
+      WORD winsockVersionRequested;
+      WSADATA winsockData;
+      int winsockErr;
+      
+      _kWinsockInitialized = true;
+      /* High-byte = minor && low-byte = major */
+      winsockVersionRequested = MAKEWORD(WINSOCK_MAJOR_VERSION,
+                                         WINSOCK_MINOR_VERSION);
+      winsockErr = WSAStartup (winsockVersionRequested, &winsockData);
+      if (winsockErr != 0)
+        return NULL;
+      if (LOBYTE(wsaData.wVersion) != WINSOCK_MAJOR_VERSION
+          || HIBYTE(wsaData.wVersion) != WINSOCK_MINOR_VERSION)
+        {
+          WSACleanup ();
+          _kWinsockInitialized = false;
+          return NULL;
+        }
+    }
+#endif
+  
+  s = socket (protocolFamily, socketType, protocol);
+  if (s != INVALID_SOCKET)
+    new = CFSocketCreateWithNative (alloc, s, cbTypes, callback, ctx);
+  
+  return new;
 }
 
 CFSocketRef
-CFSocketCreateConnectedToSocketSignature (CFAllocatorRef allocator,
-                                          const CFSocketSignature *signature,
-                                          CFOptionFlags callBackTypes,
+CFSocketCreateWithSocketSignature (CFAllocatorRef alloc,
+                                   const CFSocketSignature *sign,
+                                   CFOptionFlags cbTypes,
+                                   CFSocketCallBack callback,
+                                   const CFSocketContext *ctx)
+{
+  CFSocketRef new;
+  new = CFSocketCreate (alloc, sign->protocolFamily, sign->socketType,
+                        sign->protocol, cbTypes, callback, ctx);
+  if (new)
+    {
+      CFSocketError err;
+      err = CFSocketSetAddress (new, sign->address);
+      if (err != kCFSocketSuccess)
+        {
+          CFRelease (new);
+          new = NULL;
+        }
+    }
+  
+  return new;
+}
+
+CFSocketRef
+CFSocketCreateConnectedToSocketSignature (CFAllocatorRef alloc,
+                                          const CFSocketSignature *sign,
+                                          CFOptionFlags cbTypes,
                                           CFSocketCallBack callback,
-                                          const CFSocketContext *context,
+                                          const CFSocketContext *ctx,
                                           CFTimeInterval timeout)
 {
-  return NULL;
-}
-
-CFSocketRef
-CFSocketCreateWithNative (CFAllocatorRef allocator, CFSocketNativeHandle sock,
-                          CFOptionFlags callBackTypes,
-                          CFSocketCallBack callback,
-                          const CFSocketContext *context)
-{
-  return NULL;
-}
-
-CFSocketRef
-CFSocketCreateWithSocketSignature (CFAllocatorRef allocator,
-                                   const CFSocketSignature *signature,
-                                   CFOptionFlags callBackTypes,
-                                   CFSocketCallBack callback,
-                                   const CFSocketContext *context)
-{
-  return NULL;
+  CFSocketRef new;
+  new = CFSocketCreate (alloc, sign->protocolFamily, sign->socketType,
+                        sign->protocol, cbTypes, callback, ctx);
+  if (new)
+    {
+      CFSocketError err;
+      err = CFSocketConnectToAddress (new, sign->address, timeout);
+      if (err != kCFSocketSuccess)
+        {
+          CFRelease (new);
+          new = NULL;
+        }
+    }
+  
+  return new;
 }
 
 CFDataRef
@@ -100,32 +268,99 @@ CFSocketCopyPeerAddress (CFSocketRef s)
   return NULL;
 }
 
-void
-CFSocketGetContext (CFSocketRef s, CFSocketContext *context)
+CFSocketError
+CFSocketSetAddress (CFSocketRef s, CFDataRef address)
 {
-  return;
+  CFSocketNativeHandle sock;
+  struct sockaddr *addr;
+  socklen_t addrlen;
+  int err;
+  
+  if (CFSocketIsValid (s) == false || address == NULL)
+    return kCFSocketError;
+  
+  addr = (struct sockaddr*)CFDataGetBytePtr (address);
+  addrlen = CFDataGetLength (address);
+  if (addr == NULL || addrlen == 0)
+    return kCFSocketError;
+  sock = CFSocketGetNative (s);
+  
+  err = bind (sock, addr, addrlen);
+  if (err == 0)
+    {
+      listen (sock, 1024);
+      return kCFSocketSuccess;
+    }
+  return kCFSocketError;
+}
+
+CFSocketError
+CFSocketConnectToAddress (CFSocketRef s, CFDataRef address,
+                          CFTimeInterval timeout)
+{
+  CFSocketNativeHandle sock;
+  struct sockaddr *addr;
+  socklen_t addrlen;
+  int err;
+  
+  if (CFSocketIsValid (s) == false || address == NULL)
+    return kCFSocketError;
+  
+  addr = (struct sockaddr*)CFDataGetBytePtr (address);
+  addrlen = CFDataGetLength (address);
+  if (addr == NULL || addrlen == 0)
+    return kCFSocketError;
+  sock = CFSocketGetNative (s);
+  
+  if (timeout < 0.0)
+    {
+      int f;
+      f = fcntl (sock, F_GETFL, 0);
+      f |= O_NONBLOCK;
+      if (fcntl (sock, F_SETFL, f) != 0)
+        return kCFSocketError;
+    }
+  err = connect (sock, addr, addrlen);
+  if (err != 0 && CFSocketGetLastError () == EINPROGRESS)
+    {
+      if (timeout >= 0.0)
+        {
+          struct timeval tv;
+          fd_set writefds[FD_SETSIZE];
+          tv.tv_sec = (long)floor (timeout);
+          tv.tv_usec = (long)((timeout - floor (timeout)) * 1000000.0);
+          FD_ZERO(writefds);
+          FD_SET(sock, writefds);
+          err = select (sock + 1, NULL, writefds, NULL, &tv);
+        }
+      else
+        {
+          err = 0;
+        }
+    }
+  return err == 0 ? kCFSocketSuccess : kCFSocketError;
+}
+
+void
+CFSocketGetContext (CFSocketRef s, CFSocketContext *ctx)
+{
+  *ctx = s->_ctx;
 }
 
 CFSocketNativeHandle
 CFSocketGetNative (CFSocketRef s)
 {
-  return 0;
-}
-
-CFSocketError
-CFSocketSetAddress (CFSocketRef s, CFDataRef address)
-{
-  return kCFSocketError;
+  return s->_socket;
 }
 
 void
-CFSocketDisableCallBacks (CFSocketRef s, CFOptionFlags callBackTypes)
+CFSocketDisableCallBacks (CFSocketRef s, CFOptionFlags cbTypes)
 {
   return;
 }
 
 void
-CFSocketEnableCallBacks (CFSocketRef s, CFOptionFlags callBackTypes)
+CFSocketEnableCallBacks (CFSocketRef s, CFOptionFlags cbTypes)
 {
   return;
 }
@@ -133,7 +368,7 @@ CFSocketEnableCallBacks (CFSocketRef s, CFOptionFlags callBackTypes)
 CFOptionFlags
 CFSocketGetSocketFlags (CFSocketRef s)
 {
-  return;
+  return s->_opts;
 }
 
 void
@@ -143,14 +378,14 @@ CFSocketSetSocketFlags (CFSocketRef s, CFOptionFlags flags)
 }
 
 CFSocketError
-CFSocketConnectToAddress (CFSocketRef s, CFDataRef address,
-                          CFTimeInterval timeout)
+CFSocketSendData (CFSocketRef s, CFDataRef address, CFDataRef data,
+                  CFTimeInterval timeout)
 {
   return kCFSocketError;
 }
 
 CFRunLoopSourceRef
-CFSocketCreateRunLoopSource (CFAllocatorRef allocator, CFSocketRef s,
+CFSocketCreateRunLoopSource (CFAllocatorRef alloc, CFSocketRef s,
                              CFIndex order)
 {
   return NULL;
@@ -168,18 +403,13 @@ CFSocketIsValid (CFSocketRef s)
   return false;
 }
 
-CFSocketError
-CFSocketSendData (CFSocketRef s, CFDataRef address, CFDataRef data,
-                  CFTimeInterval timeout)
-{
-  return kCFSocketError;
-}
+
 
 CFSocketError
 CFSocketCopyRegisteredSocketSignature (const CFSocketSignature *nameServerSignature,
                                        CFTimeInterval timeout,
                                        CFStringRef name,
-                                       CFSocketSignature *signature,
+                                       CFSocketSignature *sign,
                                        CFDataRef *nameServerAddress)
 {
   return kCFSocketError;
@@ -205,7 +435,7 @@ CFSocketError
 CFSocketRegisterSocketSignature (const CFSocketSignature *nameServerSignature,
                                  CFTimeInterval timeout,
                                  CFStringRef name,
-                                 const CFSocketSignature *signature)
+                                 const CFSocketSignature *sign)
 {
   return kCFSocketError;
 }
