@@ -1,5 +1,10 @@
 2012-09-16 Stefan Bidigaray <stefanbidi@gmail.com>
 
+	* Headers/CoreFoundation/CFSocket.h: Use winsock on Windows.
+	* Source/CFSocket.c: Implement Create and Address functions.
+
+2012-09-16 Stefan Bidigaray <stefanbidi@gmail.com>
+
 	* Source/NSCFType.m: Call the CoreBase initialization code before
 	trying to initialize the bridged classes.
 
